[project]
name = "graphs"
version = "24.10.11"
description = "Self updating knowledge graph in a chat interface"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "matplotlib",
  "wordcloud",
  "pydantic",
  "openai",
  "instructor",
  "litellm",
  "graphviz",
  "panel",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff", "watchfiles"]

[tool.ruff]
exclude = [".env", ".venv", "venv", "notebooks"]
line-length = 79

[tool.ruff.lint]
ignore = ["E501"]
select = ["E", "F", "I", "W"]
fixable = ["I", "F", "W291"]

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
relative_files = true

[tool.coverage.report]
show_missing = true
fail_under = 80
